# json

./: .benchviz.yaml  .clang-format  .gitignore  .golangci.yml  LICENSE  Makefile  README.md  ROADMAP.md  compat_go126_test.go  compat_go127_test.go  compatibility_test.go  compliance_test.go  encvm.go  encvm_bench_test.go  encvm_compiler.go  encvm_exec.go  encvm_iface.go  encvm_iface_switch_test.go  encvm_ir.go  encvm_keypool_test.go  encvm_lower.go  encvm_map_iter_bench_test.go  encvm_pass.go  encvm_stack_stress_test.go  encvm_test.go  encvm_trace.go  encvm_trace_noop.go  endian_amd64.go  endian_arm64.go  endian_other.go  errors.go  errors_test.go  escape.go  escape_test.go  fuzz_test.go  go.mod  indices.go  indices_test.go  marshal_fieldname_test.go  marshal_float_test.go  (+105 more)
benchmark/: b1_marshal_test.go  b1_unmarshal_test.go  b2_parallel_marshal_test.go  b2_parallel_unmarshal_test.go  b3_decoder_test.go  b3_encoder_test.go  b5_jsonbench_test.go  data.go  data_test.go  debug.go  decoder_test.go  encoder_compat_test.go  escape_behavior_test.go  go.mod  go.sum  marshal_test.go  native_encoder_test.go  parallel_unmarshal_test.go  pgo_instr_flush.go  pgo_instr_testmain_test.go  schema.go  unmarshal_test.go
docs/: PERFORMANCE_TESTING.md  architecture.md  benchmark-amd.html  benchmark-intel.html  benchmark-m4.html  benchmark.md  decoder_buffer_prediction.md
native/rsdec/impl/: Cargo.toml
native/rsdec/impl/.cargo/: config.toml
native/rsdec/impl/src/: debug.rs  float.rs  float_tables.rs  insn.rs  lib.rs  parser.rs  resume.rs  scanner.rs  typedesc.rs  writer.rs
(+450 files in other folders)
