[package]
name = "vjson-rsdec"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "none"        # prelink needs symbols; stripping happens there

[profile.release.build-override]
opt-level = 0

[profile.dev]
panic = "unwind"
